# Coral3D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/materials/: sponza.mtl
assets/meshes/: Sponza.gltf
assets/meshes/Bottle/: WaterBottle.gltf
assets/meshes/Corset/: Corset.gltf
assets/meshes/Cube/: cube.gltf
assets/meshes/FlightHelmet/: FlightHelmet.gltf
assets/meshes/Helmet/: Scene.gltf
assets/meshes/Sphere/: sphere.gltf
assets/meshes/Sponza/: Sponza.gltf
assets/meshes/sponza_small/: sponza.gltf
coral_renderer/: CMakeLists.txt  KeyboardController.cpp  KeyboardController.h  app.h  coral_buffer.cpp  coral_buffer.h  coral_camera.cpp  coral_camera.h  coral_cubemap.cpp  coral_cubemap.h  coral_descriptors.cpp  coral_descriptors.h  coral_device.cpp  coral_device.h  coral_frame_info.cpp  coral_frame_info.h  coral_gameobject.cpp  coral_gameobject.h  coral_input.cpp  coral_input.h  coral_material.cpp  coral_material.h  coral_mesh.cpp  coral_mesh.h  coral_pipeline.cpp  coral_pipeline.h  coral_renderer.cpp  coral_renderer.h  coral_shadowmap_renderer.cpp  coral_shadowmap_renderer.h  coral_swapchain.cpp  coral_swapchain.h  coral_texture.cpp  coral_texture.h  coral_utils.cpp  coral_utils.h  coral_window.cpp  coral_window.h  first_app.cpp  first_app.h  (+12 more)
minecraft_clone/: CMakeLists.txt  atlas_generator.cpp  atlas_generator.h  chunk.cpp  chunk.h  first_app.cpp  first_app.h  main.cpp  voxel_data.cpp  voxel_data.h  voxel_renderer.cpp  voxel_renderer.h  world_generator.cpp  world_generator.h
shaders/: PosNormCol.frag  PosNormCol.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  skybox.frag  skybox.vert  voxel_shader.frag  voxel_shader.vert
shaders/compiled/: point_light.frag.spv  point_light.vert.spv  simple_shader.frag.spv  simple_shader.vert.spv  skybox.frag.spv  skybox.vert.spv
vk_renderer/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_pipeline.cpp  vk_pipeline.h  vk_texture.cpp  vk_texture.h
